--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,3 +44,71 @@ li{
 .pink{
   background-color: var(--color-pink);
 }
+
+/* Format */
+header{
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.home-icon img{
+  width: 90px;
+  height: 90px;
+  cursor: pointer;
+  transition: transform 300ms ease;
+}
+
+.selection-buttons{
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
+}
+
+img.clothes{
+  height: 55px;
+  width: 55px;
+}
+
+button{
+  cursor: pointer;
+  transition: transform 300ms ease;
+}
+
+.home-icon img:hover, 
+button:hover{
+  transform: scale(1.1);
+}
+
+
+button.color{
+  font-size: 1.2rem;
+  padding: 0 10px;
+  height: 45px;
+  border-radius: 3px;;
+}
+
+ul{
+  display: flex;
+  height: 500px;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  overflow: auto;
+}
+
+li{
+  display: flex;
+  align-items: center;
+  width: 80%;
+  margin: 10px auto;
+}
+
+.list-img{
+  margin: 10px 20px;
+}
+
+span{
+  font-size: 1rem;
+}
